--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -47,7 +47,7 @@
           </a>
           <a id="careerGuide" class="col-sm-3 option-box" href="/careerguide">
               <h3 class="title">CAREER GUIDE</h3>
-              <div class="description">Find schools for you to go in your locate that align best with your career choice.</div>
+              <div class="description">Find schools for you to go in your location that align best with your career choice.</div>
           </a>
           <a id="universityFinder" class="col-sm-3 option-box" href="/university-finder">
               <h3 class="title">UNIVERSITY FINDER</h3>
