--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -32,6 +32,12 @@
       max-height: 100%;
       margin: 0;
     }
+    #page .bg-ocean-green {
+          background-color: #2E4668
+    }
+    #page .bg-ocean-green:hover {
+      background-color: #2E4668
+    }
 </style>
     <header  id="page-header">
             <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -53,7 +59,7 @@
                             <li><a href="/careerguide">CAREER GUIDE</a></li>
                             <li><a href="/university-finder">UNI FINDER</a></li>
                             <li><a href="/about">ABOUT</a></li>
-                            <li><a href="/contact">CONTACT US</a></li>
+                            <!-- <li><a href="/contact">CONTACT US</a></li> -->
                         </ul>
                     </div>
                 </div>
