--- a/elimu_yangu/careerguide/templates/careerguide/school.html
+++ b/elimu_yangu/careerguide/templates/careerguide/school.html
@@ -66,7 +66,12 @@
                           <br />
                           <ul class="list-group">
                           {% for subject in OlevelSchooldetailsList %}
-                            <li class="list-group-item" id="subject{{ forloop.counter0 }}" data-position={{ forloop.counter0 }}>{{ subject.subjectname }}
+                            <li class="list-group-item" id="subject{{ forloop.counter0 }}" data-position={{ forloop.counter0 }}>
+                              <div style="min-height: 30px;">
+                                <span style="width: 33%; float: left">{{ subject.subjectname| title }}</span>
+                                <span style="width: 33%; float: left">Regional Rank: {{ subject.subjectregranking }}</span>
+                                <span style="width: 33%; float: left">National Rank: {{ subject.subjectnatranking }}</span>
+                              </div>
                             <div id="bar{{ forloop.counter }}" class="barfiller">
                               <div class="tipWrap">
                           		<span class="tip"></span>
