--- a/elimu_yangu/static/css/style.css
+++ b/elimu_yangu/static/css/style.css
@@ -3,6 +3,8 @@
   width: 100%;
   height: 10px;
   background: #fcfcfc;
+  float: left;
+  margin-bottom: 10px;
 }
 
 .barfiller .fill {
@@ -16,8 +18,7 @@
 .barfiller .tipWrap { display: none; }
 
 .barfiller .tip {
-  margin-top: -30px;
-  padding: 1px 4px;
+  padding: 3px 5px;
   font-size: 11px;
   color: #fff;
   left: 0px;
@@ -27,6 +28,7 @@
 }
 .list-group-item {
   padding: 1.25rem;
+  padding-bottom: 20px;
 }
 /*.subjectPerformance{
   display: none;
