--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block head_title %}{{ geo1.name }} vs {{ geo2.name }} - {{ block.super }}{% endblock %}
