--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -1,4 +1,5 @@
 {% extends 'profile/profile_detail.html' %}
+{% load i18n %}
 {% load staticfiles %}
 {% block head_css_extra %}
 <link rel="stylesheet" href="{% static 'lib/bootstrap/dist/css/bootstrap.css' %}" />
@@ -67,31 +68,33 @@
             </div>
         </section>
         <div class="col-md-12">
+
             <!--
             * =================================
             * Top School List
             * =================================
             -->
             <div class="col-md-6">
-                <h3 class="title">10 Top Schools</h3>
-                <ul class="list-group school">
-                  {% for school in schools.top_schools|slice:":10" %}
-                  <li class="list-group-item">
-                      <a href="leaguetable/schools/{{ school.code }}">
-                          <div class="col-xs-5">
-                              <div class="school-name">{{ school.name|slice:":-16" }}</div>
-                              <div class="school-type">Mixed</div>
-                          </div>
-                          <div class="col-xs-5">
-                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
-                          </div>
-                          <div class="col-xs-2">
-                              {{ school.pass_rate }}
-                          </div>
-                      </a>
-                  </li>
-                    {% endfor %}
+                <h3 class="title text-center">{%trans '10 Top Schools' %} </h3>
+                <h4 class="title text-center">{%trans 'Schools Category with 40 Students and More' %}</h4>
+                <ul id="best-40" class="list-group school">
+                  {% for school in schools.best_schools_more_40|slice:":10" %}
+                    <li class="list-group-item">
+                        <a href="leaguetable/schools/{{ school.code }}">
+                            <div class="col-xs-5">
+                                <div class="school-name">{{ school.name | title }} School</div>
+                                <div class="school-type">{{ school.gender | title }}</div>
+                            </div>
+                            <div class="col-xs-5">
+                                <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                                <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                            </div>
+                            <div class="col-xs-2">
+                                {{ school.avg_gpa | floatformat:3 }} GPA
+                            </div>
+                        </a>
+                    </li>
+                  {% endfor %}
                 </ul>
             </div>
             <!--
@@ -100,21 +103,22 @@
             * =================================
             -->
             <div class="col-md-6">
-                <h3 class="title">10 Lowest Schools</h3>
-                <ul class="list-group school">
-                  {% for school in schools.lowest_schools|slice:":10" %}
+              <h3 class="title text-center">{% trans '10 Lowest Schools' %} </h3>
+              <h4 class="title text-center">{% trans 'Schools Category with 40 Students and More' %}</h4>
+                <ul id="worst-40" class="list-group school">
+                  {% for school in schools.worst_schools_more_40|slice:":10" %}
                   <li class="list-group-item">
                       <a href="leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
-                              <div class="school-name">{{ school.name|slice:":-16" }}</div>
-                              <div class="school-type">Mixed</div>
+                              <div class="school-name">{{ school.name | title }} School</div>
+                              <div class="school-type">{{ school.gender | title }}</div>
                           </div>
                           <div class="col-xs-5">
-                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
+                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
                           </div>
                           <div class="col-xs-2">
-                              {{ school.pass_rate }}
+                              {{ school.avg_gpa | floatformat:3 }} GPA
                           </div>
                       </a>
                   </li>
@@ -122,19 +126,80 @@
                 </ul>
             </div>
         </div>
+
+        <div class="col-md-12">
+
+            <!--
+            * =================================
+            * Top School List
+            * =================================
+            -->
+            <div class="col-md-6">
+              <h3 class="title text-center">{% trans '10 Top Schools' %} </h3>
+              <h4 class="title text-center">{% trans 'Schools Category with less than 40 Students' %}</h4>
+                <ul id="best" class="list-group school">
+                  {% for school in schools.best_schools_less_40|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name | title }} School</div>
+                              <div class="school-type">{{ school.gender | title }}</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.avg_gpa | floatformat:3 }} GPA
+                          </div>
+                      </a>
+                  </li>
+                  {% endfor %}
+                </ul>
+            </div>
+            <!--
+            * =================================
+            * Lowest School List
+            * =================================
+            -->
+            <div class="col-md-6">
+              <h3 class="title text-center">{% trans '10 Lowest Schools' %} </h3>
+              <h4 class="title text-center">{% trans 'Schools Category less than 40 Students' %}</h4>
+                <ul id="worst" class="list-group school">
+                  {% for school in schools.worst_schools_less_40|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name | title }} School</div>
+                              <div class="school-type">{{ school.gender | title }}</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.avg_gpa | floatformat:3 }} GPA
+                          </div>
+                      </a>
+                  </li>
+                    {% endfor %}
+                </ul>
+            </div>
+          </div>
+        </div>
     </div>
 </div>
 </div>
 {% endblock %}
 
 {% block profile_preamble %}
-<h3 class="title">Interact with charts and statistics for additional information.</h3>
+<h3 class="title"> {% trans 'Interact with charts and statistics for additional information.' %}</h3>
 {% endblock %}
 
 {% block profile_detail %}
 <article id="schools" class="clearfix">
     <header class="section-contents">
-        <h1> Ownership</h1>
+        <h1>{% trans 'Ownership' %}</h1>
     </header>
     <div class="section-container">
         <section class="clearfix stat-row">
@@ -147,7 +212,7 @@
 
 <article id="schools" class="clearfix" style="overflow:auto;">
     <header class="section-contents">
-        <h1> Regions</h1>
+        <h1>{%trans 'Regions' %}</h1>
     </header>
     <div class="section-container" style="overflow:auto;">
         <section class="clearfix stat-row">
@@ -160,7 +225,7 @@
 
 <article id="schools" class="clearfix">
     <header class="section-contents">
-        <h1> Averege GPA</h1>
+        <h1>{% trans 'Averege GPA' %}</h1>
     </header>
     <div class="section-container">
         <section class="clearfix stat-row">
