--- a/elimu_yangu/careerguide/templates/careerguide/homepage.html
+++ b/elimu_yangu/careerguide/templates/careerguide/homepage.html
@@ -1,34 +1,35 @@
-<!-- index.html-->
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
-
+{% extends 'homepage_country.html' %}
+{% load i18n %}
+{% load humanize partition staticfiles %}
+{% get_current_language as 'sw' %}
 {% block head_title %}Career Guide{% endblock %}
 
 {% block content_container %}
   <div class="main-content">
     <div class="find-school text-center">
       <form action="/careerguide/" method="post">
-        <div class="help-text">FIND THE BEST HIGHSCHOOL FOR YOUR CAREER</div>
+        <div class="help-text">{% trans 'FIND THE BEST HIGHSCHOOL FOR YOUR CAREER' %}</div>
         <div class="help-info">
           {% csrf_token %}
             <div>
-                <span>I am a</span>
-                {{ form.gender }}
+                <span>{% trans 'I am a' %}</span>
+                 {{ form.gender }}
             </div>
             <div>
-                <span>from</span>
-                {{ form.region }}
+                <span>{% trans 'from' %}</span>
+                {{ form.regional }}
             </div>
             <div>
-                <span>currently at</span>
+                <span>{% trans 'currently at' %}</span>
                 {{ form.education_level }}
             </div>
             <div>
-                <span>and I want to be</span>
+                <span>{% trans 'and I want to be' %}</span>
                 {{ form.career }}
             </div>
         </div>
 
-        <button id="findSchool" type="submit" >FIND</button>
+        <button id="findSchool" type="submit" >{% trans 'FIND' %}</button>
         </form>
         {% if schools %}
         <div class="container">
@@ -36,7 +37,10 @@
                 <div class="col-md-12">
                     <div class="col-md-12 subject-box">
                         <div id="sub-must" class="col-xs-6">
-                            <div class="sub-rule"> TO STUDY <b class="course"> {{ career.name }} </b>, YOU NEED A PASS IN THE FOLLOWING SUBJECTS: </div>
+                            <div class="sub-rule"> {% trans 'TO STUDY' %}
+                              <b class="course"> {{ career.name }} </b>,
+                              {%trans 'YOU NEED A PASS IN THE FOLLOWING SUBJECTS:' %}
+                            </div>
                             <div class="subjects">
                               <div class='col-sm-6'>
                                 {% for sub in career.must %}
@@ -47,14 +51,16 @@
                         </div>
                         <div id="sub-optional" class="col-xs-6 border-left">
                             {% if school_level == 'A levels' %}
-                            <div class="sub-rule">AND A SATISFACTORY PASS IN:</div>
+                            <div class="sub-rule">{%trans 'AND A SATISFACTORY PASS IN:' %}</div>
                             <div class="subjects">
                               <div class='col-sm-6'>
                                 <div class='sub-name'>General Studies</div>
                               </div>
                             </div>
                             {% else %}
-                            <div class="sub-rule">AND A PASS IN AT LEAST 2 OF THE FOLLOWING SUBJECTS:</div>
+                            <div class="sub-rule">
+                              {%trans 'AND A PASS IN AT LEAST 2 OF THE FOLLOWING SUBJECTS:' %}
+                            </div>
                             <div class="subjects">
                               <div class='col-sm-6'>
                                 {% for sub in career.olevel_optional %}
@@ -75,28 +81,32 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="title text-center">List of Schools doing well in {{ school_level }} subjects aligning to your career </h3>
+                <h3 class="title text-center">
+                {% blocktrans %}List of Schools doing well in {{ school_level }} subjects aligning to your career{% endblocktrans %}
+                </h3>
                 <div class="box-table">
                     <table class="table table-hover">
                         <thead>
                           <tr>
-                            <th class="col-md-7">Name of School</th>
-                            <th class="col-md-1">Gender</th>
-                            <th class="col-md-1">Region</th>
-                            <th class="col-md-1">Average GPA</th>
-                            <th class="col-md-1">National Ranking</th>
-                            <th class="col-md-1">Regional Ranking</th>
+                            <th class="col-md-7">{%trans 'Name of School' %}</th>
+                            <th class="col-md-1">{%trans 'Category' %}</th>
+                            <th class="col-md-1">{%trans 'Region' %}</th>
+                            <th class="col-md-1">{%trans 'Average GPA' %}</th>
+                            <th class="col-md-1">{%trans 'National Ranking' %}</th>
+                            <th class="col-md-1">{%trans 'Regional Ranking' %}</th>
                           </tr>
                         </thead>
                         <tbody>
                           {% for school in schools %}
                           <tr>
-                            <td><a href="/careerguide/school/{{ school.schoolcode }}">{{ school.schoolname | title }}</td>
-                              <td>Gender</td>
-                              <td>{{ school.region | title }}</td>
-                              <td>{{ school.career_avg| floatformat:3 }}</td>
-                              <td>{{ school.natranking }}</td>
-                              <td>{{ school.regranking }}</td>
+                            <td><a href="/careerguide/school/{{ school.schoolcode }}">
+                              {{ school.schoolname | title }}
+                            </td>
+                            <td>{{ school.category }}</td>
+                            <td>{{ school.region | title }}</td>
+                            <td>{{ school.career_avg| floatformat:3 }}</td>
+                            <td>{{ school.natranking }}</td>
+                            <td>{{ school.regranking }}</td>
                           </tr>
                           {% endfor %}
                         </tbody>
@@ -111,28 +121,31 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="title text-center">Overall best performing schools for Ordinary Level 2017 </h3>
+                <h3 class="title text-center">
+                  {%trans 'Overall best performing schools for Ordinary Level 2017' %} </h3>
                 <div class="box-table">
                     <table class="table table-hover">
                         <thead>
                           <tr>
-                            <th class="col-md-4">Name of School</th>
-                            <th class="col-md-3">Category</th>
-                            <th class="col-md-2">Region</th>
-                            <th class="col-md-1">School GPA</th>
-                            <th class="col-md-1">National Ranking</th>
-                            <th class="col-md-1">Regional Ranking</th>
+                            <th class="col-md-7">{%trans 'Name of School' %}</th>
+                            <th class="col-md-1">{%trans 'Category' %}</th>
+                            <th class="col-md-1">{%trans 'Region' %}</th>
+                            <th class="col-md-1">{%trans 'Average GPA' %}</th>
+                            <th class="col-md-1">{%trans 'National Ranking' %}</th>
+                            <th class="col-md-1">{%trans 'Regional Ranking' %}</th>
                           </tr>
                         </thead>
                         <tbody>
                           {% for school in topschools.top_Olevel %}
                           <tr>
-                            <td><a href="/careerguide/school/{{ school.schoolcode }}">{{ school.schoolname | title }}</td>
-                              <td>{{ school.category }}</td>
-                              <td>{{ school.region | title }}</td>
-                              <td>{{ school.gpa| floatformat:3 }}</td>
-                              <td>{{ school.natranking }}</td>
-                              <td>{{ school.regranking }}</td>
+                            <td><a href="/careerguide/school/{{ school.schoolcode }}">
+                              {{ school.schoolname | title }}
+                            </td>
+                            <td>{{ school.category }}</td>
+                            <td>{{ school.region | title }}</td>
+                            <td>{{ school.gpa| floatformat:3 }}</td>
+                            <td>{{ school.natranking }}</td>
+                            <td>{{ school.regranking }}</td>
                           </tr>
                           {% endfor %}
                         </tbody>
@@ -142,17 +155,17 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h3 class="title text-center">Overall best performing schools for Advance Level 2017 </h3>
+                <h3 class="title text-center">{%trans 'Overall best performing schools for Advance Level 2017' %} </h3>
                 <div class="box-table">
                     <table class="table table-hover">
                         <thead>
                           <tr>
-                            <th class="col-md-4">Name of School</th>
-                            <th class="col-md-3">Category</th>
-                            <th class="col-md-2">Region</th>
-                            <th class="col-md-1">School GPA</th>
-                            <th class="col-md-1">National Ranking</th>
-                            <th class="col-md-1">Regional Ranking</th>
+                            <th class="col-md-7">{%trans 'Name of School' %}</th>
+                            <th class="col-md-1">{%trans 'Category' %}</th>
+                            <th class="col-md-1">{%trans 'Region' %}</th>
+                            <th class="col-md-1">{%trans 'Average GPA' %}</th>
+                            <th class="col-md-1">{%trans 'National Ranking' %}</th>
+                            <th class="col-md-1">{%trans 'Regional Ranking' %}</th>
                           </tr>
                         </thead>
                         <tbody>
