--- a/elimu_yangu/careerguide/templates/careerguide/school.html
+++ b/elimu_yangu/careerguide/templates/careerguide/school.html
@@ -1,5 +1,5 @@
-<!-- index.html-->
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage_country.html' %}
+{% load i18n %}{% load humanize partition staticfiles %}
 
 {% block head_title %}School Page: Career Guide{% endblock %}
 
@@ -41,11 +41,11 @@
                           <div class="col-sm-8">
                               <div class="col-xs-6">
                                   <div class="school-name">{{ school_o_category }} </div>
-                                  <div class="school-type">Mixed</div>
+                                  <!-- <div class="school-type">Mixed</div> -->
                               </div>
                               <div class="col-xs-4">
-                                  <div class="school-rank">#{{ school_o_natranking }} in Tanzania</div>
-                                  <div class="school-rank">#{{ school_o_regranking }} in {{ school_region }}</div>
+                                  <div class="school-rank">#{{ school_o_natranking }} {%trans 'in' %} Tanzania</div>
+                                  <div class="school-rank">#{{ school_o_regranking }} {%trans 'in' %} {{ school_region }}</div>
                               </div>
                               <div class="col-xs-2">
                                   {{ school_o_gpa }} GPA
@@ -59,18 +59,18 @@
                       </div>
                       <div class="col-xs-12">
                         <div class="col-sm-12">
-                        <span class="details-info">Click on A Subject In The Bar Chart To View More Details</span>
+                        <span class="details-info">{%trans 'Click on A Subject In The Bar Chart To View More Details' %}</span>
                       </div>
                       <div class="col-sm-6">
-                          <h3 class="no-margin">Subject Perfomance</h3>
+                          <h3 class="no-margin">{%trans 'Subject Perfomance' %}</h3>
                           <br />
                           <ul class="list-group">
                           {% for subject in OlevelSchooldetailsList %}
                             <li class="list-group-item" id="subject{{ forloop.counter0 }}" data-position={{ forloop.counter0 }}>
                               <div style="min-height: 30px;">
                                 <span style="width: 33%; float: left">{{ subject.subjectname| title }}</span>
-                                <span style="width: 33%; float: left">Regional Rank: {{ subject.subjectregranking }}</span>
-                                <span style="width: 33%; float: left">National Rank: {{ subject.subjectnatranking }}</span>
+                                <span style="width: 33%; float: left"> {%trans 'Regional Rank:' %} {{ subject.subjectregranking }}</span>
+                                <span style="width: 33%; float: left">{%trans 'National Rank:' %} {{ subject.subjectnatranking }}</span>
                               </div>
                             <div id="bar{{ forloop.counter }}" class="barfiller">
                               <div class="tipWrap">
@@ -106,17 +106,17 @@
                       <div class="col-xs-12 chart-header">
                           <div class="col-sm-6">
                               <div class="col-xs-12">
-                                  <h4>Overall Performance</h4>
+                                  <h4>{%trans 'Overall Performance' %}</h4>
                               </div>
                           </div>
                           <div class="col-sm-6">
                               <div class="col-xs-5">
                                   <div class="school-name">{{ school_a_category }} </div>
-                                  <div class="school-type">Mixed</div>
+                                  <!-- <div class="school-type">Mixed</div> -->
                               </div>
                               <div class="col-xs-5">
-                                  <div class="school-rank">#{{ school_a_natranking }} in Tanzania</div>
-                                  <div class="school-rank">#{{ school_a_regranking }} in {{ school_region }}</div>
+                                  <div class="school-rank">#{{ school_a_natranking }} {%trans 'in' %} Tanzania</div>
+                                  <div class="school-rank">#{{ school_a_regranking }} {%trans 'in' %} {{ school_region }}</div>
                               </div>
                               <div class="col-xs-2">
                                   {{ school_a_gpa }} GPA
@@ -130,10 +130,10 @@
                       </div>
                       <div class="col-xs-12">
                         <div class="col-sm-12">
-                        <span class="details-info">Click on A Subject In The Bar Chart To View More Details</span>
+                        <span class="details-info">{%trans 'Click on A Subject In The Bar Chart To View More Details' %}</span>
                       </div>
                       <div class="col-sm-6">
-                          <h3 class="no-margin">Subject Perfomance</h3>
+                          <h3 class="no-margin">{%trans 'Subject Perfomance' %}</h3>
                           <br />
                           <ul class="list-group">
                             {% for subject in AlevelSchooldetailsList %}
