--- a/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
@@ -1,149 +1,149 @@
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage_country.html' %}{% load i18n %}{% load humanize partition staticfiles %}
 
-{% block head_title %}League Table : Schools Ranking{% endblock %}
+{% block head_title %}School League : School{% endblock %}
 
 {% block content_container %}
 
   <div class="map-box">
-      <h3 class="map-title center">Discover The Stories Behind The Data</h3>
-      <h5 class="map-description center">HURUMap description comes here</h5>
+      <h3 class="map-title center">{%trans 'Discover The Stories Behind The Data' %}</h3>
+      <h5 class="map-description center">{%trans 'School League helps storytellers and campaigners use data to add context and depth to stories.' %}</h5>
       <div id="slippy-map" class="map"></div>
   </div>
 
   <div class="help-box">
-      <div class="help-text text-center">SCHOOL RANKINGS
+      <div class="help-text text-center">{%trans 'SCHOOL RANKINGS' %}
         <span>
           <select id="rank-year" class="inline-select" style="color: #D0A331" onchange="get_school_ranking();">
                 <option value="2017">2017</option>
-                <option value="2016">2016</option>
-                <option value="2015">2015</option>
+                <!-- <option value="2016">2016</option> -->
+                <!-- <option value="2015">2015</option>
                 <option value="2014">2014</option>
                 <option value="2013">2013</option>
-                <option value="2012">2012</option>
+                <option value="2012">2012</option> -->
             </select>
           </span></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <            <div class="col-md-12">
 
-                <!--
-                * =================================
-                * Top School List
-                * =================================
-                -->
-                <div class="col-md-6">
-                    <h3 class="title text-center">10 Top Schools </h3>
-                    <h4 class="title text-center">Schools Category with 40 Students and More</h4>
-                    <ul id="best-40" class="list-group school">
-                      {% for school in schools.best_schools_more_40|slice:":10" %}
-                        <li class="list-group-item">
-                            <a href="leaguetable/schools/{{ school.code }}">
-                                <div class="col-xs-5">
-                                    <div class="school-name">{{ school.name | title }} School</div>
-                                    <div class="school-type">{{ school.gender | title }}</div>
-                                </div>
-                                <div class="col-xs-5">
-                                    <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                                    <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region | title }}</div>
-                                </div>
-                                <div class="col-xs-2">
-                                    {{ school.avg_gpa | floatformat:3 }} GPA
-                                </div>
-                            </a>
-                        </li>
-                      {% endfor %}
-                    </ul>
-                </div>
-                <!--
-                * =================================
-                * Lowest School List
-                * =================================
-                -->
-                <div class="col-md-6">
-                  <h3 class="title text-center">10 Lowest Schools </h3>
-                  <h4 class="title text-center">Schools Category with 40 Students and More</h4>
-                    <ul id="worst-40" class="list-group school">
-                      {% for school in schools.worst_schools_more_40|slice:":10" %}
-                        <li class="list-group-item">
-                            <a href="leaguetable/schools/{{ school.code }}">
-                                <div class="col-xs-5">
-                                    <div class="school-name">{{ school.name | title }} School</div>
-                                    <div class="school-type">{{ school.gender | title }}</div>
-                                </div>
-                                <div class="col-xs-5">
-                                    <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                                    <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region | title }}</div>
-                                </div>
-                                <div class="col-xs-2">
-                                    {{ school.avg_gpa| floatformat:3 }} GPA
-                                </div>
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
+                            <!--
+                            * =================================
+                            * Top School List
+                            * =================================
+                            -->
+                            <div class="col-md-6">
+                                <h3 class="title text-center">{%trans '10 Top Schools' %} </h3>
+                                <h4 class="title text-center">{%trans 'Schools Category with 40 Students and More' %}</h4>
+                                <ul id="best-40" class="list-group school">
+                                  {% for school in schools.best_schools_more_40|slice:":10" %}
+                                    <li class="list-group-item">
+                                        <a href="leaguetable/schools/{{ school.code }}">
+                                            <div class="col-xs-5">
+                                                <div class="school-name">{{ school.name | title }} School</div>
+                                                <div class="school-type">{{ school.gender | title }}</div>
+                                            </div>
+                                            <div class="col-xs-5">
+                                                <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                                                <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                                            </div>
+                                            <div class="col-xs-2">
+                                                {{ school.avg_gpa | floatformat:3 }} GPA
+                                            </div>
+                                        </a>
+                                    </li>
+                                  {% endfor %}
+                                </ul>
+                            </div>
+                            <!--
+                            * =================================
+                            * Lowest School List
+                            * =================================
+                            -->
+                            <div class="col-md-6">
+                              <h3 class="title text-center">{% trans '10 Lowest Schools' %} </h3>
+                              <h4 class="title text-center">{% trans 'Schools Category with 40 Students and More' %}</h4>
+                                <ul id="worst-40" class="list-group school">
+                                  {% for school in schools.worst_schools_more_40|slice:":10" %}
+                                  <li class="list-group-item">
+                                      <a href="leaguetable/schools/{{ school.code }}">
+                                          <div class="col-xs-5">
+                                              <div class="school-name">{{ school.name | title }} School</div>
+                                              <div class="school-type">{{ school.gender | title }}</div>
+                                          </div>
+                                          <div class="col-xs-5">
+                                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                                          </div>
+                                          <div class="col-xs-2">
+                                              {{ school.avg_gpa | floatformat:3 }} GPA
+                                          </div>
+                                      </a>
+                                  </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
 
-            <div class="col-md-12">
+                        <div class="col-md-12">
 
-                <!--
-                * =================================
-                * Top School List
-                * =================================
-                -->
-                <div class="col-md-6">
-                  <h3 class="title text-center">10 Top Schools </h3>
-                  <h4 class="title text-center">Schools Category with less than 40 Students</h4>
-                    <ul id="best" class="list-group school">
-                      {% for school in schools.best_schools_less_40|slice:":10" %}
-                        <li class="list-group-item">
-                            <a href="leaguetable/schools/{{ school.code }}">
-                                <div class="col-xs-5">
-                                    <div class="school-name">{{ school.name |title }} School</div>
-                                    <div class="school-type">{{ school.gender|title }}</div>
-                                </div>
-                                <div class="col-xs-5">
-                                    <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                                    <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region | title }}</div>
-                                </div>
-                                <div class="col-xs-2">
-                                    {{ school.avg_gpa| floatformat:3}} GPA
-                                </div>
-                            </a>
-                        </li>
-                      {% endfor %}
-                    </ul>
-                </div>
-                <!--
-                * =================================
-                * Lowest School List
-                * =================================
-                -->
-                <div class="col-md-6">
-                  <h3 class="title text-center">10 Lowest Schools </h3>
-                  <h4 class="title text-center">Schools Category less than 40 Students</h4>
-                    <ul id="worst" class="list-group school">
-                      {% for school in schools.worst_schools_less_40|slice:":10" %}
-                        <li class="list-group-item">
-                            <a href="leaguetable/schools/{{ school.code }}">
-                                <div class="col-xs-5">
-                                    <div class="school-name">{{ school.name| title }} School</div>
-                                    <div class="school-type">{{ school.gender| title }}</div>
-                                </div>
-                                <div class="col-xs-5">
-                                    <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                                    <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region | title }}</div>
-                                </div>
-                                <div class="col-xs-2">
-                                    {{ school.avg_gpa| floatformat:3 }} GPA
-                                </div>
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-              </div>
-            </div>
+                            <!--
+                            * =================================
+                            * Top School List
+                            * =================================
+                            -->
+                            <div class="col-md-6">
+                              <h3 class="title text-center">{% trans '10 Top Schools' %} </h3>
+                              <h4 class="title text-center">{% trans 'Schools Category with less than 40 Students' %}</h4>
+                                <ul id="best" class="list-group school">
+                                  {% for school in schools.best_schools_less_40|slice:":10" %}
+                                  <li class="list-group-item">
+                                      <a href="leaguetable/schools/{{ school.code }}">
+                                          <div class="col-xs-5">
+                                              <div class="school-name">{{ school.name | title }} School</div>
+                                              <div class="school-type">{{ school.gender | title }}</div>
+                                          </div>
+                                          <div class="col-xs-5">
+                                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                                          </div>
+                                          <div class="col-xs-2">
+                                              {{ school.avg_gpa | floatformat:3 }} GPA
+                                          </div>
+                                      </a>
+                                  </li>
+                                  {% endfor %}
+                                </ul>
+                            </div>
+                            <!--
+                            * =================================
+                            * Lowest School List
+                            * =================================
+                            -->
+                            <div class="col-md-6">
+                              <h3 class="title text-center">{% trans '10 Lowest Schools' %} </h3>
+                              <h4 class="title text-center">{% trans 'Schools Category less than 40 Students' %}</h4>
+                                <ul id="worst" class="list-group school">
+                                  {% for school in schools.worst_schools_less_40|slice:":10" %}
+                                  <li class="list-group-item">
+                                      <a href="leaguetable/schools/{{ school.code }}">
+                                          <div class="col-xs-5">
+                                              <div class="school-name">{{ school.name | title }} School</div>
+                                              <div class="school-type">{{ school.gender | title }}</div>
+                                          </div>
+                                          <div class="col-xs-5">
+                                              <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
+                                              <div class="school-rank">#{{ school.regional_rank_all }} {%trans 'in' %} {{ school.region | title }}</div>
+                                          </div>
+                                          <div class="col-xs-2">
+                                              {{ school.avg_gpa | floatformat:3 }} GPA
+                                          </div>
+                                      </a>
+                                  </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                          </div>
+                        </div>
             </div>
         </div>
     </div>
