--- a/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
@@ -1,51 +1,50 @@
 {% extends 'profile/profile_detail.html' %}
-{% load static %}
-
+{% load i18n %}
+{% load staticfiles %}
+{% block head_css_extra %}
+<link rel="stylesheet" href="{% static 'lib/bootstrap/dist/css/bootstrap.css' %}" />
+<link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.css' %}" />
+<link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
+<link rel="stylesheet" href="{% static 'css/site.css' %}" />
+{% endblock %}
 {% block header %}
 <style>
-    #page-footer, #page-header {
-        background: #204d8a;
+    #page-footer {
+        background: #2E4668;
+        padding: 10px 30px 30px;
+    }
+    #page-footer img {
+      max-height: 100%;
+      margin: 0;
     }
 </style>
 <header id="page-header">
-    <div id="page-header-title" class="wrapper clearfix">
-        <i id="menu-toggle" class="fa fa-bars"></i>
-        <a class="title" href="{% url 'homepage' %}">
-            <img src="{% static 'img/logos/books.png' %}" style="height: 44px; float: left;"/>
-            <span style="font-size: 25px;font-weight: bolder; margin-left:10px; line-height: 50px;">League Table</span><br />
-        </a>
-
-        <div class="nav-menu">
-            <ul id="site-menu">
-                {% block header_menu %}
-                    <li><a href="/schools">Full League</a></li>
-                    <li><a href="/about">About</a></li>
-                {% endblock header_menu %}
-            </ul>
-
-            {% if not hide_nav_tools %}
-                {% block nav_tools %}
-                <div id="menu" class="tool-set clearfix">
-                    <div class="tool-group">
-                        <input name="geography_select" id="geography-select" type="text" placeholder="Search School" autocomplete="off">
-                    </div>
-                    {% if not hide_nav_compare %}
-                    {% comment %}
-                    <span class="separator">or</span>
-                    <div class="tool-group">
-                        <a class="button" href="{% url 'table_search' %}">
-                            <i class="fa fa-chevron-circle-right"></i>
-                            Search for data
-                        </a>
-                    </div>
-                    {% endcomment %}
-                    {% endif %}
-                </div>
-                {% endblock %}
-            {% endif %}
-        </div>
-    </div>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/">
+                      <img class="logo" src="{% static 'img/logo0.png' %}" />
+                  </a>
+              </div>
+              <div class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav text-center">
+                      <li><a href="/leaguetable">SCHOOL LEAGUE</a></li>
+                      <li><a href="/careerguide">CAREER GUIDE</a></li>
+                      <li><a href="/university-finder">UNI FINDER</a></li>
+                      <li><a href="/about">ABOUT</a></li>
+                      <!-- <li><a href="/contact">CONTACT US</a></li> -->
+                  </ul>
+              </div>
+          </div>
+      </nav>
 </header>
+<div class="main-content">
 {% block header_content %}
 <div id="cover-map" class="clearfix">
     <div id="slippy-map"></div>
@@ -75,7 +74,7 @@
     </div>
 </div>
 {% endblock %}
-
+</div>
 {% endblock %}
 
 {% block profile_preamble %}
@@ -84,7 +83,7 @@
         <h2><i class="fa fa-bar-chart"></i>&nbsp;&nbsp;&nbsp;Stats</h2>
         <hr />
         <br/><br />
-        
+
         <div class="column-third">
             <h3>{{ school.ownership }}</h3>
             <h3>Ownership</h3>
