--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -1,4 +1,4 @@
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage_country.html' %}{% load i18n %}{% load humanize partition staticfiles %}
 
 {% block head_title %}Elimu Yangu{% endblock %}
 
@@ -11,8 +11,8 @@
   * =================================
   -->
   <div class="landing-main text-center">
-    <h1 class="tagline">TAGLINE FOR THE PRODUCT COMES HERE</h1>
-    <h4 class="more-info">Additional Info About Product Maker Can Come Here</h4>
+    <h1 class="tagline">{% trans 'MAP OUT YOUR EDUCATION' %}</h1>
+    <h4 class="more-info">{%trans 'A smarter way to plan and search for the right schools and universities' %}</h4>
 
   <!--    <button id="getStarted">GET STARTED</button>-->
   </div>
@@ -26,32 +26,32 @@
       <div class="row">
   <!--            <div class="help-text with-padding">HOW CAN WE HELP YOU?</div>-->
           <div class="help-info">
-              <span>I am a</span>
+              <span>{%trans 'I am a' %}</span>
               <select id="person" class="inline-select">
-                  <option value="journalist" selected="selected">journalist</option>
-                  <option value="student">student</option>
+                  <option value="journalist" selected="selected">{%trans 'journalist' %}</option>
+                  <option value="student">{%trans 'student' %}</option>
               </select>
-              <span>looking for</span>
+              <span>{%trans 'looking for' %}</span>
               <select id="wishlist" class="inline-select">
-                  <option value="suitable university courses to attend">suitable university courses to attend</option>
-                  <option value="data on high schools" selected="selected">data on high schools</option>
-                  <option value="best high schools to go to">best high schools to go to</option>
+                  <option value="suitable university courses to attend">{%trans 'suitable university courses to attend' %}</option>
+                  <option value="data on high schools" selected="selected">{%trans 'data on high schools' %}</option>
+                  <option value="best high schools to go to">{%trans 'best high school to go to' %}</option>
               </select>
-              <span>in the country</span>
+              <span>{%trans 'in the country' %}</span>
           </div>
       </div>
       <div class="row">
           <a id="schoolLeague" class="col-sm-3 option-box selected" href="/leaguetable">
               <h3 class="title">SCHOOL LEAGUE</h3>
-              <div class="description">Explore the complete list of schools in Tanzania and compare performances within the different regions.</div>
+              <div class="description">{%trans 'Explore the complete list of schools in Tanzania and compare performances within the different regions.' %}</div>
           </a>
           <a id="careerGuide" class="col-sm-3 option-box" href="/careerguide">
               <h3 class="title">CAREER GUIDE</h3>
-              <div class="description">Find schools for you to go in your location that align best with your career choice.</div>
+              <div class="description">{%trans 'Find schools for you to go in your location that align best with your career choice.' %}</div>
           </a>
           <a id="universityFinder" class="col-sm-3 option-box" href="/university-finder">
               <h3 class="title">UNIVERSITY FINDER</h3>
-              <div class="description">Find the best possible university course to attend based on your performance and preferences.</div>
+              <div class="description">{%trans 'Find the best possible university course to attend based on your performance and preferences.' %}</div>
           </a>
       </div>
   </div>
@@ -65,13 +65,13 @@
   <div class="container">
       <div class="row">
           <div class="col-md-8 col-md-offset-2">
-              <h2 class="title text-center">WHAT THEY SAY ABOUT US</h2>
+              <h2 class="title text-center">{%trans 'WHAT THEY SAY ABOUT US' %}</h2>
               <div class="testimonial-list">
                   <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
                   <div class="single-testimonial text-center">
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
                       <h2>John Doe</h2>
-                      <h3>On Career Guide</h3>
+                      <h3>{%trans 'On' %} Career Guide</h3>
                   </div>
                   <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
                   <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
