--- a/elimu_yangu/universityfinder/templates/index.html
+++ b/elimu_yangu/universityfinder/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage_country.html' %}{% load i18n %}{% load humanize partition staticfiles %}
 
 {% block head_title %}University Finder{% endblock %}
 
@@ -7,7 +7,7 @@
 
 <div class="container">
 <div class="row">
-    <h2 id="page-title" class="title text-center">FILL IN YOUR SUBJECTS AND GRADES</h2>
+    <h2 id="page-title" class="title text-center">{%trans 'FILL IN YOUR SUBJECTS AND GRADES' %}</h2>
     <section>
         <div class="wizard">
             <ul class="nav nav-wizard">
@@ -15,21 +15,21 @@
                 <li class="active">
                     <a href="#step1" data-toggle="tab" data-title="FILL IN YOUR SUBJECTS AND GRADES">
                         <span>Step 01</span>
-                        <span class="info">Fill in Subjects</span>
+                        <span class="info">{%trans 'Fill in Subjects' %}</span>
                     </a>
                 </li>
 
                 <li class="disabled">
                     <a href="#step2" data-toggle="tab" data-title="ENTER YOUR PREFFERED COURSES">
                         <span>Step 02</span>
-                        <span class="info">Set Preferred Courses</span>
+                        <span class="info">{%trans 'Set Preferred Courses' %}</span>
                     </a>
                 </li>
 
                 <li class="disabled">
                     <a href="#step3" data-toggle="tab" data-title="SELECT A COURSE TO SEE MORE DETAILS">
                         <span>Step 03</span>
-                        <span class="info">View Course Options</span>
+                        <span class="info">{%trans 'View Course Options' %}</span>
                     </a>
                 </li>
             </ul>
@@ -38,7 +38,7 @@
                 <div class="tab-pane active" id="step1">
                     <div id="subject-grades"></div>
                     <div type="button" class="add-box-item" data-toggle="modal" data-target="#subModal">
-                        <span>Add Subject</span>
+                        <span>{%trans 'Add Subject' %}</span>
                         <b> + </b>
                     </div>
 
@@ -49,21 +49,21 @@
                           <div class="modal-content">
                             <div class="modal-header">
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
-                              <h4 class="modal-title">Add Subject</h4>
+                              <h4 class="modal-title">{%trans 'Add Subject' %}</h4>
                             </div>
                             <div class="modal-body">
                               <div class="form-group">
-                                <label for="sub-name">Name:</label>
+                                <label for="sub-name">{%trans 'Name:' %}</label>
                                 {{ form.subjects}}
                               </div>
                               <div class="form-group">
-                                <label for="sub-grade">Grade:</label>
+                                <label for="sub-grade">{%trans 'Grade' %}</label>
                                 {{ form.grades }}
                               </div>
-                              <button id="add-sub-grade" type="button" class="btn btn-default">Save</button>
+                              <button id="add-sub-grade" type="button" class="btn btn-default">{%trans 'Save' %}</button>
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-default" data-dismiss="modal">{%trans 'Close' %}</button>
                             </div>
                           </div>
                         </div>
@@ -73,7 +73,7 @@
                 <div class="tab-pane" id="step2">
                     <div id="prefered-courses"></div>
                     <div type="button" class="add-box-item" data-toggle="modal" data-target="#courseModal">
-                        <span>Add Course</span>
+                        <span>{%trans 'Add Course' %}</span>
                         <b> + </b>
                     </div>
 
@@ -84,17 +84,17 @@
                           <div class="modal-content">
                             <div class="modal-header">
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
-                              <h4 class="modal-title">Add Course</h4>
+                              <h4 class="modal-title">{%trans 'Add Course' %}</h4>
                             </div>
                             <div class="modal-body">
                               <div class="form-group">
-                                <label for="course-name">Name:</label>
+                                <label for="course-name">{%trans 'Name:' %}</label>
                                 {{ form.majors }}
                               </div>
-                              <button id="add-prefered-course" type="button" class="btn btn-default">Save</button>
+                              <button id="add-prefered-course" type="button" class="btn btn-default">{%trans 'Save' %}</button>
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-default" data-dismiss="modal">{%trans 'Close' %}</button>
                             </div>
                           </div>
                         </div>
@@ -103,13 +103,13 @@
                 </div>
                 <div class="tab-pane" id="step3">
                     <div class="col-md-12">
-                        <h2 class="title text-center">PREFFERED COURSES</h2>
+                        <h2 class="title text-center">{%trans 'PREFFERED COURSES' %}</h2>
                         <div class="box-table">
                             <table class="table table-hover">
                                 <thead>
                                   <tr>
-                                    <th class="col-md-7">Name of Course</th>
-                                    <th class="col-md-5">University</th>
+                                    <th class="col-md-7">{%trans 'Name of Course' %}</th>
+                                    <th class="col-md-5">{%trans 'University' %}</th>
                                     <!-- <th class="col-md-2 text-center">Location</th>
                                     <th class="col-md-2 text-center">Admission Likelihood</th> -->
                                   </tr>
